Algumas alterações do HTML/CSS

--- a/src/index.html
+++ b/src/index.html
@@ -42,10 +42,10 @@
         <h3>Tempo Diário Investido</h3>
         <h4>Esse tempo é algo muito valioso para qualquer pessoa, certo?
           Então claramente temos que levar esse fator em consideração.</h4>
-        <div class="form">
+        <form>
           <input id="horasDiarias" type="text" name="name" placeholder="Horas" autocomplete="off" required
             onkeypress="return apenasNumeros();" />
-        </div>
+        </form>
       </div>
       <div class="card-2">
         <div class="colorcard"></div>
@@ -53,10 +53,10 @@
         <h3>Dias efetivos trabalhando</h3>
         <h4>Outro fator é a quantidade de dias que você irá disponibilizar para trabalhar no projeto. Organize-os bem!
         </h4>
-        <div class="form">
+        <form>
           <input id="diasEfetivos" type="text" name="name" placeholder="Dias" autocomplete="off" required
             onkeypress="return apenasNumeros();" />
-        </div>
+          <form>
       </div>
 
       <div class="card-3">
@@ -65,10 +65,10 @@
         <h3>Dias de Férias por projeto</h3>
         <h4>Uma parte do valor da sua hora reflete diretamente na quantidade de dias que você deseja tirar "férias" com
           o valor total projeto.</h4>
-        <div class="form">
+        <form>
           <input id="diasFerias" type="text" name="name" placeholder="Férias" autocomplete="off" required
             onkeypress="return apenasNumeros();" />
-        </div>
+        </form>
       </div>
 
       <div class="card-4">
@@ -77,10 +77,10 @@
         <h3>Valor Total do Projeto</h3>
         <h4> O principal fator que é o total a ser recebido pelo freela. A partir desse valor, do quanto você desejaria
           ganhar em cima do trabalho</h4>
-        <div class="form">
+        <form>
           <input id="valorProjeto" type="text" name="name" placeholder="Valor Total" autocomplete="off" required
             onkeypress="return apenasNumeros();" />
-        </div>
+        </form>
       </div>
     </div>
   </main>
